Design: Fix display of search box on mobile

--- a/src/_styles/components/_search.scss
+++ b/src/_styles/components/_search.scss
@@ -5,154 +5,158 @@
 \*------------------------------------*/
 
 search {
-	height: 0;
-	display: block;
-	margin: 0;
+  height: 0;
+  display: block;
+  margin: 0;
 }
 
 .form--search {
-	width: 95vw;
+  width: 95vw;
 
-	@supports (margin-block: 1em) {
-		width: unset;
-		inline-size: 95vw;
-	}
+  @supports (margin-block: 1em) {
+    width: unset;
+    inline-size: 95vw;
+  }
 
-	[type="search"] {
-		@include rem(font-size, $font-size-nav);
+  [type="search"] {
+    @include rem(font-size, $font-size-nav);
 
-		appearance: none;
-		border: 1px solid;
-		border-radius: 3px;
-		@include rem(margin, 0 5 0 0);
-		@include rem(padding, 5 10);
-		width: 100%;
+    appearance: none;
+    border: 1px solid;
+    border-radius: 3px;
+    @include rem(margin, 0 5 0 0);
+    @include rem(padding, 5 10);
+    width: 100%;
 
-		@supports (margin-block: 1em) {
-			@include unset(padding width);
-			margin: 0;
-			@include rem(margin-inline-end, 5, false);
-			@include rem(padding-block, 5, false);
-			@include rem(padding-inline, 10, false);
-			inline-size: 100%;
-		}
-	}
+    @supports (margin-block: 1em) {
+      @include unset(padding width);
+      margin: 0;
+      @include rem(margin-inline-end, 5, false);
+      @include rem(padding-block, 5, false);
+      @include rem(padding-inline, 10, false);
+      inline-size: 100%;
+    }
+  }
 
-	button {
-		font-weight: bold;
-		@include rem(font-size, $font-size-small);
-		@include rem(padding, 7 15);
+  button {
+    font-weight: bold;
+    @include rem(font-size, $font-size-small);
+    @include rem(padding, 7 15);
 
-		@supports (margin-block: 1em) {
-			padding: unset;
-			@include rem(padding-block, 7, false);
-			@include rem(padding-inline, 15, false);
-		}
-	}
+    @supports (margin-block: 1em) {
+      padding: unset;
+      @include rem(padding-block, 7, false);
+      @include rem(padding-inline, 15, false);
+    }
+  }
 }
 
 .form-control--search {
-	width: 70%;
+  width: 70%;
 
-	@supports (margin-block: 1em) {
-		width: unset;
-		inline-size: 70%;
-	}
+  @supports (margin-block: 1em) {
+    width: unset;
+    inline-size: 70%;
+  }
 }
 
 // Better layout: Flexbox
 @supports (display: flex) {
-	.form--search {
-		display: flex;
-		flex-direction: row;
-		justify-content: center;
-		width: 100%;
-		@include rem(gap, $default-spacing);
+  .form--search {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    @include rem(gap, $default-spacing);
 
-		@supports (margin-block: 1em) {
-			width: unset;
-			inline-size: 100%;
-		}
-	}
+    @supports (margin-block: 1em) {
+      width: unset;
+      inline-size: 100%;
+    }
+  }
 }
 
 @media screen and (max-width: #{$bp-medium-em}) {
-	#search {
-		display: block;
-		background: none;
-		border-width: 0;
-		position: relative;
-		width: auto;
-		height: auto;
-		padding: 0;
-		margin-top: 1rem;
+  search {
+    height: auto;
+  }
 
-		@supports (margin-block: 1em) {
-			@include unset(width height margin-top);
-			inline-size: auto;
-			block-size: auto;
-			margin-block-start: 1rem;
-		}
-	}
+  #search {
+    display: block;
+    background: none;
+    border-width: 0;
+    position: relative;
+    width: auto;
+    height: auto;
+    padding: 0;
+    margin-top: 1rem;
+
+    @supports (margin-block: 1em) {
+      @include unset(width height margin-top);
+      inline-size: auto;
+      block-size: auto;
+      margin-block-start: 1rem;
+    }
+  }
 }
 
 @media screen and (min-width: #{$bp-medium-em}) {
-	.form--search {
-		background: rgba($color-white, 0.9);
+  .form--search {
+    background: rgba($color-white, 0.9);
 
-		box-sizing: content-box;
-		margin: 0;
+    box-sizing: content-box;
+    margin: 0;
 
-		z-index: 1;
+    z-index: 1;
 
-		width: 80vw;
+    width: 80vw;
 
-		@supports (margin-block: 1em) {
-			width: unset;
-			inline-size: 80vw;
-		}
+    @supports (margin-block: 1em) {
+      width: unset;
+      inline-size: 80vw;
+    }
 
-		html.dark-mode & {
-			background: rgba($color-background-dark, 0.9);
-		}
+    html.dark-mode & {
+      background: rgba($color-background-dark, 0.9);
+    }
 
-		button {
-			@include rem(font-size, 22);
-			@include rem(padding, 10 15);
+    button {
+      @include rem(font-size, 22);
+      @include rem(padding, 10 15);
 
-			@supports (margin-block: 1em) {
-				padding: unset;
-				@include rem(padding-block, 10, false);
-				@include rem(padding-inline, 15, false);
-			}
-		}
-	}
+      @supports (margin-block: 1em) {
+        padding: unset;
+        @include rem(padding-block, 10, false);
+        @include rem(padding-inline, 15, false);
+      }
+    }
+  }
 
-	.form-control--search {
-		@include rem(margin, 0 5 0 0);
-		width: 100%;
+  .form-control--search {
+    @include rem(margin, 0 5 0 0);
+    width: 100%;
 
-		input[type="search"] {
-			@include rem(font-size, $font-size-h2);
-			box-sizing: border-box;
-			width: 100%;
-			margin: 0;
-		}
+    input[type="search"] {
+      @include rem(font-size, $font-size-h2);
+      box-sizing: border-box;
+      width: 100%;
+      margin: 0;
+    }
 
-		@supports (margin-block: 1em) {
-			@include unset(margin width);
-			margin: 0;
-			@include rem(margin-inline-end, 5, false);
-			inline-size: 100%;
+    @supports (margin-block: 1em) {
+      @include unset(margin width);
+      margin: 0;
+      @include rem(margin-inline-end, 5, false);
+      inline-size: 100%;
 
-			input[type="search"] {
-				width: unset;
-				inline-size: 100%;
-			}
-		}
-	}
+      input[type="search"] {
+        width: unset;
+        inline-size: 100%;
+      }
+    }
+  }
 
-	/*
+  /*
 		// Better layout: Flexbox
 		@supports (display: flex) {
 				
